🎨 Spacing fixes / updates

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -59,6 +59,7 @@ $space-main-sm: 15px;
 $space-gutter: 15px;
 
 $space-offset-left: 400px;
+$space-offset-top: 120px;
 
 
 // EXTENDS
